2010-05-11  Lluis Sanchez Gual  <lluis@novell.com>

	* cecil.snk:
	* Makefile.am:
	* Mono.Cecil.csproj:
	* Mono.Cecil.Mdb.csproj: Sign Mono.Cecil.

2010-01-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.Cecil.csproj: Fix the Cecil decompiler in the build.
	  Make building MD with Makefiles work again, and puts the
	  decompiler properly in its own dll instead of merging it
	  into a franken-Cecil.

2010-01-15  Mike Krüger  <mkrueger@novell.com>

	* Cecil.Decompiler:
	* Mono.Cecil.csproj:
	* Mono.Cecil.Mdb.csproj:
	* Cecil.Decompiler/Cecil.Decompiler:
	* Cecil.Decompiler/Cecil.Decompiler.Ast:
	* Cecil.Decompiler/Cecil.Decompiler.Cil:
	* Cecil.Decompiler/Cecil.Decompiler.Steps:
	* Cecil.Decompiler/Cecil.Decompiler.csproj:
	* Cecil.Decompiler/Cecil.Decompiler.Pattern:
	* Cecil.Decompiler/Cecil.Decompiler.Languages:
	* Cecil.Decompiler/Cecil.Decompiler.ControlFlow:
	* Cecil.Decompiler/Cecil.Decompiler/Extensions.cs:
	* Cecil.Decompiler/Cecil.Decompiler/Annotations.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/Statement.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/ICodeNode.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Cil/Formatter.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Steps/Matcher.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/SwitchCase.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Cil/BlockRange.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/Extensions.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/Expression.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/IfStatement.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/DefaultCase.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/CatchClause.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/CodeNodeType.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/TryStatement.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Steps/TypeOfStep.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/ICodeVisitor.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Ast/ForStatement.cs:
	* Cecil.Decompiler/Cecil.Decompiler.Languages/CSharp.cs: