@@ -1,3 +1,7 @@
+2010-05-21  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Makefile.am: Add missing dist file.
+
 2010-05-11  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* cecil.snk:
